# book_cover_maker

./: README.md  get_fonts.py  pyproject.toml
.github/workflows/: release.yml
src/book_cover_maker/: __init__.py  gen_cover.py
