[project]
name = "book-cover-maker"
version = "0.1.6"
description = "A tool to generate book covers with customizable text and fonts"
authors = [
    { name = "David Cho", email = "csi00700@gmail.com" },
]
dependencies = [
    "pillow>=11.3.0",
    "rye-easy>=0.1.29",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
book-cover-maker = "book_cover_maker.gen_cover:main"

[build-system]
requires = [
    "hatchling==1.26.3",
]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "autoflake>=2.3.1",
    "autopep8>=2.3.2",
    "black>=25.9.0",
    "ruff>=0.14.0",
    "isort>=7.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/book_cover_maker",
]

[tool.hatch.build.targets.wheel.force-include]
fonts = "fonts"
"cover_background.png" = "cover_background.png"
