[project]
name = "book-cover-maker"
version = "0.1.6"
description = "A tool to generate book covers with customizable text and fonts"
authors = [
    { name = "David Cho", email = "csi00700@gmail.com" },
]
dependencies = [
    "pillow>=11.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
book-cover-maker = "book_cover_maker.gen_cover:main"

[build-system]
requires = [
    "hatchling==1.26.3",
]
build-backend = "hatchling.build"

## Development tools are not pinned by rye anymore; manage with uv extra/group if desired

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/book_cover_maker",
]

[tool.hatch.build.targets.wheel.force-include]
fonts = "fonts"
"cover_background.png" = "cover_background.png"
